--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -182,7 +182,9 @@ ion-slide {
     padding-right: 0;
     padding-top: 8px;
     padding-bottom: 8px;
-    background: var(--ion-item-background, var(--ion-background-color, #fff));
+    /*     background: var(--ion-item-background, var(--ion-background-color, #fff));
+     background: var(--ion-item-background, var(--ion-background-color, #fff));
+ */
 }
 
 .colorvisabierta {
