--- a/src/app/pages/licencia/licencia.page.html
+++ b/src/app/pages/licencia/licencia.page.html
@@ -12,7 +12,7 @@
         </div>
         <!-- Register form -->
         <form [formGroup]="onRegisterForm" class="list-form">
-            <ion-item no-padding class="animated fadeInUp">
+            <ion-item no-padding class="itemcaptura animated fadeInUp">
                 <ion-label position="floating">
                     <ion-icon name="person" item-start></ion-icon>
                     Nit Empresa registrada
