--- a/src/app/pages/licencia/licencia.page.scss
+++ b/src/app/pages/licencia/licencia.page.scss
@@ -11,3 +11,8 @@
         --background: linear-gradient(135deg, #595959, #131313);
     }
 }
+
+.itemcaptura {
+    --background: #4c4c4c;
+    --background-focused: #5a5858;
+}
