--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -21,7 +21,7 @@
 
         <!-- Login form -->
         <form [formGroup]="onLoginForm" class="list-form">
-            <ion-item no-padding class="animated fadeInUp">
+            <ion-item no-padding class="itemcaptura animated fadeInUp">
                 <!-- <ion-label position="floating">
                     <ion-icon name="mail" item-start></ion-icon>
                     {{ 'app.label.email' | translate }}
@@ -41,7 +41,7 @@
                     {{ 'app.label.errors.field' | translate }}
                 </ion-text>
             </p>
-            <ion-item *ngIf="_parEmpreProv.datoslicencia.logeo_firebase" no-padding class="animated fadeInUp">
+            <ion-item *ngIf="_parEmpreProv.datoslicencia.logeo_firebase" no-padding class="itemcaptura animated fadeInUp">
                 <ion-label position="floating">
                     <ion-icon name="mail" item-start></ion-icon>
                     <!-- {{ 'app.label.email' | translate }} -->
@@ -56,7 +56,7 @@
             </p>
 
 
-            <ion-item no-padding class="animated fadeInUp">
+            <ion-item no-padding class="itemcaptura animated fadeInUp">
                 <ion-label position="floating">
                     <ion-icon name="lock" item-start></ion-icon>
                     <!-- {{ 'app.label.password' | translate }} -->
