--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -12,6 +12,11 @@
     }
 }
 
+.itemcaptura {
+    --background: #4c4c4c;
+    --background-focused: #5a5858;
+}
+
 .video-bg {
     position: fixed;
     top: 50%;
