--- a/src/app/pages/visita-detail/visita-detail.page.scss
+++ b/src/app/pages/visita-detail/visita-detail.page.scss
@@ -345,8 +345,15 @@ a {
 
 .buttonult {
     text-transform: none !important;
-    padding-right: 5px !important;
-    padding-left: 5PX !important;
+    padding-right: 0px !important;
+    padding-left: 0px !important;
+    padding-bottom: 6px;
+}
+
+.botones {
+    padding-bottom: 45px;
+    padding-top: 0px;
+    padding-left: 0px;
 }
 
 button-native {
