--- a/src/app/pages/modal/modal-actcliente/modal-actcliente.page.scss
+++ b/src/app/pages/modal/modal-actcliente/modal-actcliente.page.scss
@@ -4,3 +4,10 @@ agm-map {
         display: none !important;
     }
 }
+
+.headerdirec {
+    font-weight: 500 !important;
+    font-size: inherit !important;
+    margin-top: auto;
+    margin-bottom: auto;
+}
