--- a/src/app/pages/visita-detail/visita-detail.page.scss
+++ b/src/app/pages/visita-detail/visita-detail.page.scss
@@ -18,6 +18,14 @@
     text-transform: uppercase;
 }
 
+.idtercer {
+    margin-top: 1px;
+}
+
+.fechahora {
+    margin-top: 5px;
+}
+
 .spinner-container {
     width: 100%;
     text-align: center;
