--- a/src/app/pages/recibo-detail/recibo-detail.page.html
+++ b/src/app/pages/recibo-detail/recibo-detail.page.html
@@ -126,7 +126,7 @@
                         </ion-input>
                     </ion-col>
                     <ion-col size="3">
-                        <ion-button shape="round" size="success" (click)="addrecibo(oblshop, valor_abono)">
+                        <ion-button shape="round" size="success" (click)="addrecibo(oblshop)">
                             <ion-icon slot="end" name="save"></ion-icon>
                         </ion-button>
 
