--- a/src/app/pages/settings/settings.page.html
+++ b/src/app/pages/settings/settings.page.html
@@ -6,9 +6,17 @@
         <ion-title>Configuración App</ion-title>
     </ion-toolbar>
 </ion-header>
+<div *ngIf="trabajando">
+    <ion-card>
+        <ion-item padding class="animated fadeIn fast">
+            <ion-text color="warning"> Trabajando. Por favor espere...</ion-text>
+            <ion-spinner name="bubbles"></ion-spinner>
+        </ion-item>
+    </ion-card>
+</div>
 
-<ion-content>
-    <ion-item class="bg-profile">
+<ion-content *ngIf="!trabajando">
+    <!-- <ion-item class="bg-profile">
         <ion-avatar slot="start">
             <img src="assets/img/avatar.jpeg" class="user-avatar">
         </ion-avatar>
@@ -32,21 +40,45 @@
                 Logout
             </ion-button>
         </ion-label>
-    </ion-item>
+    </ion-item> -->
 
-    <ion-list no-border>
+    <ion-list>
+        <ion-list-header>
+            <ion-text color="dark">
+                <h5>Actualizar Firebase</h5>
+            </ion-text>
+        </ion-list-header>
+        <ion-item tappable (click)="actciudades()">
+            <ion-icon name="arrow-round-up" slot="start" color="primary"></ion-icon>
+            <ion-label color="primary">Ciudades</ion-label>
+            <p>Ciudades: Actualizar firebase con cambios en Netsolin</p>
+        </ion-item>
+        <ion-item tappable (click)="actimagenesfactura()">
+            <ion-icon name="images" slot="start" color="primary"></ion-icon>
+            <p>Imagenes Bodega a Facturar: Actualizar firebase con el link de imagenes de carpeta firestore.</p>
+        </ion-item>
+        <ion-item tappable (click)="actimagenespedidos()">
+            <ion-icon name="images" slot="start" color="primary"></ion-icon>
+            <p>Imagenes Bodega Pedidos: Actualizar firebase con el link de imagenes de carpeta firestore.</p>
+        </ion-item>
+    </ion-list>
+    <!-- <ion-list no-border>
         <ion-list-header>
             <ion-text color="dark">
                 <h5>General</h5>
             </ion-text>
         </ion-list-header>
-        <!-- <ion-item>
-      <ion-icon name="settings" slot="start" color="primary"></ion-icon>
-      <ion-label color="primary">App Language</ion-label>
-      <ion-select [(ngModel)]="lang">
-        <ion-select-option *ngFor="let language of languages" [value]="language">{{language}}</ion-select-option>
-      </ion-select>
-    </ion-item> -->
+        <ion-item-options side="end">
+            <ion-item-option color="danger" (click)="deleteItem(message)">Quitar</ion-item-option>
+        </ion-item-options>
+
+        <ion-item>
+            <ion-icon name="settings" slot="start" color="primary"></ion-icon>
+            <ion-label color="primary">App Language</ion-label>
+            <ion-select [(ngModel)]="lang">
+                <ion-select-option *ngFor="let language of languages" [value]="language">{{language}}</ion-select-option>
+            </ion-select>
+        </ion-item>
         <ion-item>
             <ion-icon name="notifications" slot="start" color="primary"></ion-icon>
             <ion-label class="label" color="primary"> Enable notifications </ion-label>
@@ -59,13 +91,13 @@
                 <h5>Currency</h5>
             </ion-text>
         </ion-list-header>
-        <!-- <ion-item>
-      <ion-icon name="card" slot="start" color="primary"></ion-icon>
-      <ion-label color="primary">Payment Method</ion-label>
-      <ion-select [(ngModel)]="paymentMethod">
-        <ion-select-option *ngFor="let method of paymentMethods" [value]="method">{{method}}</ion-select-option>
-      </ion-select>
-    </ion-item> -->
+        <ion-item>
+            <ion-icon name="card" slot="start" color="primary"></ion-icon>
+            <ion-label color="primary">Payment Method</ion-label>
+            <ion-select [(ngModel)]="paymentMethod">
+                <ion-select-option *ngFor="let method of paymentMethods" [value]="method">{{method}}</ion-select-option>
+            </ion-select>
+        </ion-item>
         <ion-item>
             <ion-icon name="logo-usd" slot="start" color="dark"></ion-icon>
             <ion-label color="primary">Currency</ion-label>
@@ -80,15 +112,15 @@
                 <h5>Otros</h5>
             </ion-text>
         </ion-list-header>
-        <!-- <ion-item>
-      <ion-icon name="mail" slot="start" color="primary"></ion-icon>
-      <ion-label class="label" color="primary">Enable Promotions</ion-label>
-      <ion-toggle [(ngModel)]="enablePromo"></ion-toggle>
-    </ion-item> -->
+        <ion-item>
+            <ion-icon name="mail" slot="start" color="primary"></ion-icon>
+            <ion-label class="label" color="primary">Enable Promotions</ion-label>
+            <ion-toggle [(ngModel)]="enablePromo"></ion-toggle>
+        </ion-item>
         <ion-item>
             <ion-icon name="mail" slot="start" color="primary"></ion-icon>
             <ion-label class="label" color="primary">Registrar Log</ion-label>
             <ion-toggle [(ngModel)]="enableHistory"></ion-toggle>
         </ion-item>
-    </ion-list>
+    </ion-list> -->
 </ion-content>
