--- a/src/app/pages/recibo-detail/recibo-detail.page.scss
+++ b/src/app/pages/recibo-detail/recibo-detail.page.scss
@@ -3,3 +3,8 @@
         --background: linear-gradient(-135deg, var(--ion-color-medium), var(--ion-color-light))
     }
 }
+
+.hdatobliga {
+    font-size: 11px;
+    font-weight: bold;
+}
