--- a/src/app/pages/visita-detail/visita-detail.page.html
+++ b/src/app/pages/visita-detail/visita-detail.page.html
@@ -282,10 +282,10 @@
                         <ion-card-content no-margin margin-vertical class="bg-white" *ngFor="let item of clienteAct.cartera">
                             <ion-grid>
                                 <ion-row>
-                                    <ion-col size="6">
-                                        <ion-icon name="checkbox" color="primary"></ion-icon>Obligación: {{item.num_obliga}}
+                                    <ion-col size="8">
+                                        <ion-icon name="checkbox" color="primary"></ion-icon>Obligación: {{item.num_obliga}} {{item.cod_dfactu+'/'+item.num_dfactu}}
                                     </ion-col>
-                                    <ion-col size="6">
+                                    <ion-col size="4">
                                         <ion-icon name="alarm" color="primary"></ion-icon>{{item.fecha_obl | date: 'shortDate'}}
                                     </ion-col>
                                 </ion-row>
