--- a/src/app/pages/settings/settings.page.html
+++ b/src/app/pages/settings/settings.page.html
@@ -53,6 +53,11 @@
             <ion-label color="primary">Ciudades</ion-label>
             <p>Ciudades: Actualizar firebase con cambios en Netsolin</p>
         </ion-item>
+        <ion-item tappable (click)="actbancos()">
+            <ion-icon name="arrow-round-up" slot="start" color="primary"></ion-icon>
+            <ion-label color="primary">Bancos</ion-label>
+            <p>Bancos: Actualizar firebase con cambios en Netsolin</p>
+        </ion-item>
         <ion-item tappable (click)="actimagenesfactura()">
             <ion-icon name="images" slot="start" color="primary"></ion-icon>
             <p>Imagenes Bodega a Facturar: Actualizar firebase con el link de imagenes de carpeta firestore.</p>
