--- a/src/app/pages/recibo-detail/recibo-detail.page.html
+++ b/src/app/pages/recibo-detail/recibo-detail.page.html
@@ -95,8 +95,11 @@
                 </ion-text>
             </h3>
             <h3 class="hdatobliga">
-                <ion-text color="danger">
-                    Descuentos hasta el: {{ oblshop.fec_limdesc | date}}
+                <ion-text *ngIf="!apli_desc" color="danger">
+                    No aplica Descuentos vencieron el {{ oblshop.fec_limdesc | date}}
+                </ion-text>
+                <ion-text *ngIf="apli_desc" color="success">
+                    Descuentos hasta: {{ oblshop.fec_limdesc | date}}
                 </ion-text>
             </h3>
         </ion-card-content>
@@ -110,7 +113,14 @@
             <ion-badge slot="end" color="danger">
                 {{oblshop.dias_venci }} Días Vencido
             </ion-badge>
-
+        </ion-item>
+        <ion-item class="bg-white">
+            <ion-label>Pago en Efectivo</ion-label>
+            <ion-checkbox (ionChange)="total()" [(ngModel)]="paga_efectivo"></ion-checkbox>
+        </ion-item>
+        <ion-item class="bg-white">
+            <ion-label>Paga Saldo Total </ion-label>
+            <ion-checkbox (ionChange)="total()" [(ngModel)]="abono_total"></ion-checkbox>
         </ion-item>
         <ion-item class="bg-white">
             <p>
@@ -128,72 +138,73 @@
                 {{oblshop.saldo - valor_abono | currency }}
             </ion-badge>
         </ion-item>
+        <ion-item class="bg-white" *ngIf="apli_desc && (dcto_dchef>0 || dcto_dchban>0)">
+            <p *ngIf="paga_efectivo">
+                Descuento Duchas {{oblshop.pord_duefec}}%:
+            </p>
+            <ion-badge slot="end" color="danger" *ngIf="paga_efectivo">
+                -{{dcto_dchef | currency }}
+            </ion-badge>
+            <p *ngIf="!paga_efectivo">
+                Descuento Duchas {{oblshop.pord_duban}}%:
+            </p>
+            <ion-badge slot="end" color="danger" *ngIf="!paga_efectivo">
+                -{{dcto_dchban | currency }}
+            </ion-badge>
+        </ion-item>
+        <ion-item class="bg-white" *ngIf="apli_desc && (dcto_dchef>0 || dcto_dchban>0 || dcto_otref>0 || dcto_otrban>0)">
+            <p *ngIf="paga_efectivo">
+                Descuento Otros {{oblshop.pord_otrefe}}%:
+            </p>
+            <ion-badge slot="end" color="danger" *ngIf="paga_efectivo">
+                -{{dcto_otref | currency }}
+            </ion-badge>
+            <p *ngIf="!paga_efectivo">
+                Descuento Otros {{oblshop.pord_otrban}}%:
+            </p>
+            <ion-badge slot="end" color="danger" *ngIf="!paga_efectivo">
+                -{{dcto_otrban | currency }}
+            </ion-badge>
+        </ion-item>
+        <ion-item class="bg-white" *ngIf="!abono_total">
+            <p>
+                Valor Abonar:
+            </p>
+            <ion-input class="inputnumero" slot="end" (ionChange)="total()" [(ngModel)]="valor_abono" type="number" min="1" max="99999999" step="10000" placeholder="Valor a Abonar" clearOnEdit="true">
+            </ion-input>
+        </ion-item>
+        <ion-item class="bg-white">
+            <p>
+                Otros Descuentos:
+            </p>
+            <ion-input class="inputnumero" slot="end" (ionChange)="total()" [(ngModel)]="otros_desc" type="number" min="0" max="99999999" step="10000" clearOnEdit="true">
+            </ion-input>
+        </ion-item>
+        <ion-item class="bg-white">
+            <p>
+                Aj.Retenciones:
+            </p>
+            <ion-input class="inputnumero" slot="end" (ionChange)="total()" [(ngModel)]="retencion" type="number" min="0" max="99999999" step="10000" clearOnEdit="true">
+            </ion-input>
+        </ion-item>
+        <ion-item class="bg-white">
+            <ion-button shape="round" color="success" (click)="addrecibo(oblshop)">
+                <ion-icon slot="start" name="save"></ion-icon>
+            </ion-button>
+            <ion-button shape="round" color="danger" (click)="deleterecibo(oblshop)">
+                <ion-icon slot="start" name="trash"></ion-icon>
+            </ion-button>
+            <ion-label>
+                Neto a Recibir:
+            </ion-label>
+            <ion-badge slot="end" color="success">
+                {{valor_abono - dcto_dchef - dcto_dchban - dcto_otref - dcto_otrban - otros_desc - retencion | currency }}
+            </ion-badge>
+        </ion-item>
+
     </ion-card>
     <ion-footer>
         <ion-toolbar>
-            <ion-grid>
-                <ion-row>
-                    <ion-col size="4">
-                        <ion-label>
-                            Abonar:
-                        </ion-label>
-                    </ion-col>
-                    <ion-col size="5">
-                        <ion-input (ionChange)="total()" [(ngModel)]="valor_abono" type="number" min="1" max="99999999" step="10000" placeholder="Valor a Abonar" clearOnEdit="true">
-                        </ion-input>
-                    </ion-col>
-                    <ion-col size="3">
-                        <ion-button shape="round" size="success" (click)="addrecibo(oblshop)">
-                            <ion-icon slot="end" name="save"></ion-icon>
-                        </ion-button>
-
-                    </ion-col>
-                </ion-row>
-                <ion-row>
-                    <ion-col size="4">
-                        <ion-label>
-                            Dcto Duchas:-
-                        </ion-label>
-                    </ion-col>
-                    <ion-col size="5">
-                        <ion-input (ionChange)="total()" [(ngModel)]="dcto_duchas" type="number" min="0" max="99999999" step="10000" clearOnEdit="true">
-                        </ion-input>
-                    </ion-col>
-                </ion-row>
-                <ion-row>
-                    <ion-col size="4">
-                        <ion-label>
-                            Dcto Otros:-
-                        </ion-label>
-                    </ion-col>
-                    <ion-col size="5">
-                        <ion-input (ionChange)="total()" [(ngModel)]="dcto_otros" type="number" min="0" max="99999999" step="10000" clearOnEdit="true">
-                        </ion-input>
-                    </ion-col>
-                </ion-row>
-                <ion-row>
-                    <ion-col size="4">
-                        <ion-label>
-                            Retención:-
-                        </ion-label>
-                    </ion-col>
-                    <ion-col size="5">
-                        <ion-input (ionChange)="total()" [(ngModel)]="retencion" type="number" min="0" max="99999999" step="10000" clearOnEdit="true">
-                        </ion-input>
-                    </ion-col>
-                </ion-row>
-                <ion-row>
-                    <ion-item class="bg-white">
-                        <ion-label>
-                            Neto a Recibir:
-                        </ion-label>
-                        <ion-badge slot="end" color="success">
-                            {{valor_abono - dcto_duchas- dcto_otros - retencion | currency }}
-                        </ion-badge>
-                    </ion-item>
-                </ion-row>
-
-            </ion-grid>
         </ion-toolbar>
     </ion-footer>
 
